--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -43,6 +43,7 @@
                             <th scope="col">Name</th>
                             <th scope="col">Surname</th>
                             <th scope="col">Salary</th>
+                            <th scope="col">Role</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -52,6 +53,7 @@
                             <td th:text="${user.getName()}">Name</td>
                             <td th:text="${user.getSurname()}">Surname</td>
                             <td th:text="${user.getSalary()}">Salary</td>
+                            <td th:text="${user.getRoles()}">Role</td>
                         </tr>
                         </tbody>
                     </table>
